# portfolio-monorepo

./: .gitignore  .pre-commit-config.yaml  SECURITY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  renovate.json
portfolio-backend/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
portfolio-backend/alembic/: env.py
portfolio-backend/alembic/versions/: 3a7f21bc_create_auth_events_table.py  69e9b063_create_admin_users_table.py  b2c14e80_add_totp_to_admin_users.py  c4d918ef_relax_totp_enc_and_index_auth_events.py  d5a1e3f0_add_email_2fa_to_admin_users.py
portfolio-backend/app/: main.py  worker.py
portfolio-backend/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  redis.py
portfolio-backend/app/features/auth/: audit.py  captcha.py  cookies.py  dependencies.py  devices.py  exceptions.py  mfa_store.py  models.py  rate_limit.py  repository.py  router.py  schemas.py  service.py  token_store.py
portfolio-backend/app/features/email/: client.py  code_store.py  exceptions.py  service.py  tasks.py
portfolio-backend/app/features/email/templates/: __init__.py  _base.html.j2  _base.txt.j2  _macros.html.j2  admin_recovery_notice.html.j2  admin_recovery_notice.txt.j2  login_notification.html.j2  login_notification.txt.j2  two_factor_code.html.j2  two_factor_code.txt.j2
portfolio-backend/app/features/email/templates/security/: _generic.html.j2  _generic.txt.j2  admin_recovery.html.j2  admin_recovery.txt.j2  cookie_signature_invalid.html.j2  cookie_signature_invalid.txt.j2  email_2fa_disable_failed.txt.j2  (+17 more)
portfolio-backend/app/shared/: security.py
portfolio-backend/deploy/traefik/: .env.example  README.md  docker-compose.yml  traefik.yml
portfolio-backend/deploy/traefik/dynamic/: middlewares.yml
portfolio-backend/docs/: runbook-admin-recovery.md  runbook-backup.md  runbook-deploy.md
portfolio-backend/docs/superpowers/plans/: 2026-04-23-deploy-cross-origin-traefik.md  2026-04-23-login-hcaptcha-and-lockout-hardening.md
portfolio-backend/docs/superpowers/specs/: 2026-04-23-deploy-cross-origin-traefik-design.md  2026-04-23-login-hcaptcha-and-lockout-hardening-design.md
portfolio-backend/scripts/: create-edge-network.sh  create_admin.py
portfolio-backend/tests/: conftest.py
portfolio-backend/tests/core/: test_body_size_limit.py  test_config_validators.py  test_proxy_headers_gate.py  test_readiness_guard.py
portfolio-backend/tests/features/: test_auth_dependencies.py  test_auth_service.py  test_cookie_helpers.py  test_email_2fa_flow.py  test_login_device_email.py
portfolio-backend/tests/features/auth/: test_captcha.py  test_devices.py  test_rate_limit.py
portfolio-backend/tests/features/email/: test_audit_fanout.py  test_client.py  test_code_store.py  test_service.py  test_templates.py
portfolio-backend/tests/shared/: test_security.py
(+123 files in other folders)
