[project]
name = "portfolio-backend"
version = "0.1.0"
description = "Portfolio Backend API - Authentication & Admin Service"
authors = [
    {name = "Eduardo Alves",email = "eduardo.alves@centranet.com.br"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "redis[hiredis] (>=7.4.0,<8.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "cryptography (>=46.0.7,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.11,<0.16.0)"
]
